神海序更新

--- a/shenhai/index.html
+++ b/shenhai/index.html
@@ -33,15 +33,15 @@
     <h2>神海作大集序</h2>
 
     <p>
-        茫茫神海，天外之天。億萬散界，如礁石般墜於冥海，成片成羣，而爲諸大界。大界有上神、下神、諸仙、庶凡，而又分爲小小諸天。大界之間，其遙也不僅東南西北之遥，而去於異方，何以「里」而言其距。神矣冥海中，某孤羣嶼内，乃一講之啟。諸神多界，人龍靈妖，存百萬年有餘。大劫數運運，小劫動轉轉。往事中多有精彩，來事中多有不知。是諸天之民謂其天下亦神海也，故正名是集《神海作大集》。
+        茫茫神海，浩浩重天。億萬界散於冥中，無量礁洒於墨海。成片成羣，乃諸大界也。其中：上神稱帝，下神大夫，諸仙般臣，凡下庶衆。而又閒閒然，分小小諸天，若聯聯羣嶼。界界之閒，遙哉不限東南西北，遠哉不論尺步丈里。冥冥海里，某孤羣島生，爲是講之啟。其有諸神多界，人龍靈妖，历久百萬年，地廣億萬里。大劫數運運，小劫動轉轉。往事中多有精彩，來事中多有神秘。
     </p>
 
     <p>
-        本頁者神海諸天之集作，具有奇傳怪史，說高仙猛妖，諸神之相環。是筆者所創之一景，仙幻西東皆收，多韻合引。初有《神海閑談》一集書本，存於紙間亦存於太虚網上。八回成之。而後有餘文，不適入閑談，亦不舍留而不陳，而因必思焉善處鄙網頁。神海閑談頁者，止於是書，而不讓於他章。同再審是頁，本吾欲還中國古風於今之技，章内敢言有成，而仍存小瑕，章外僅用其一二耳。故思：即再作網頁，何不采古籍之美，用其一二之味，全正排諸？
+        是天之民謂其世閒者亦神海也，故正名是集《神海作大集》。本集者藏神海諸天之作，具言奇傳怪史，說高仙猛妖，諸神之相環，凡人之相遇。是筆者所創一景，仙幻西東收意，欣文言之美靈而自妄仿其妙韻。初有《神海閑談》共八章成本，後有《神海廣記》收羅閑作。再後之，尙難知。
     </p>
 
     <p>
-        本序臨眠間而書，慌恐請諒亂文。
+        是作網頁，采修魔道陰術而使排文體列豎下右左，非其本設矣。筆者望是頁能現古書之一二分之美。
     </p>
 
 </div>
@@ -51,7 +51,7 @@
 
     <p>文言玄幻故事・<em><span class="tight">Tall tales from the Celestial Sea</span></em></p>
 
-    <p>本書者，說神海世界之奇事也。是魔神之園，洪荒之天下，龍妖猛獸不計其數，人靈萬族同處一間，歷經悠長，萬年不足道之。洪荒至今，多有遺傳、怪說、閑事，同集一卷，神海閑談是也。</p>
+    <p>本書者，說神海世界之奇事也。是魔神之園，洪荒之天，至今多有遺傳、怪說、閑事，同集一卷，神海閑談是也。</p>
 
     <h3><a href="shxt">※往閱是書</a></h3>
 
@@ -59,7 +59,7 @@
 
 <div class="juan">
     <h2 id="-">神海廣記</h2>
-    <p>洪洪大虛，泛瀾無數里，無窮無盡。虛水玄玄，孤孤然島群所立，散界相聯，形之一地，有神在上，有凡在下，神通茂茂，其人謂大虛神海。本文集神海孤界中之奇話奇記，特成一冊，專録其事。</p>
+    <p>右正書文，八章共卷。是散收集，止記不限。故不入閑談正本者，皆入廣記也。</p>
     <h3><a href="shgj">※往閱是書</a></h3>
 </div>
 
