--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -169,19 +169,19 @@
 
     <blockquote>
         <p>
-            灰土日烈兮帝羲恩盈（（凡身神诞兮龙家弟兄<br>
-            深山雄雄兮缭雲重重（（鳞甲海湛兮双目晨彤<br>
-            荒土日灼兮洪水滂沛（（饥哉亡哉兮何数死害<br>
-            双神观难兮莫不流泪（（民生之艰兮冷望聿愧<br>
-            幸恩帝羲兮灵启仙生（（绕缠浩法兮气宿道成<br>
-            众生哀鸣兮一祷灵醒（（誓守凡庶兮一令玄冥<br>
-            双首仰兮敕浩天（（（（暴雨静兮虐风迁<br>
-            风雨和兮民物熙（（（（香火多兮天外疑<br>
-            帝㫨怒兮震地燃天（（（）金帝下兮皆必颤颠<br>
-            谁人逆道兮谁人伪神（（敢诋世久兮敢鄙制真<br>
-            欲降万苦兮欲赐分尸（（然神必珍兮同血不夷<br>
-            别有刑罚兮分放散弃（（一囚岱山兮一逐远地<br>
-            因天地衡兮易常交替（（风雨时和兮苍生得憩
+            灰土日烈兮帝羲恩盈（（凡身神誕兮龍家弟兄<br>
+            深山雄雄兮繚雲重重（（鱗甲海湛兮雙目晨彤<br>
+            荒土日灼兮洪水滂沛（（饑哉亡哉兮何數死害<br>
+            雙神觀難兮莫不流淚（（民生之艱兮冷望聿愧<br>
+            幸恩帝羲兮靈啟仙生（（繞纏浩法兮氣宿道成<br>
+            衆生哀鳴兮一禱靈醒（（誓守凡庶兮一令玄冥<br>
+            雙首仰兮敕浩天（（（（暴雨靜兮虐風遷<br>
+            風雨和兮民物熙（（（（香火多兮天外疑<br>
+            帝㫨怒兮震地燃天（（（）金帝下兮皆必顫顛<br>
+            誰人逆道兮誰人僞神（（敢詆世久兮敢鄙制真<br>
+            欲降萬苦兮欲賜分屍（（然神必珍兮同血不夷<br>
+            别有刑罰兮分放散棄（（一囚<u>岱</u>山兮一逐遠地<br>
+            因天地衡兮易常交替（（風雨时和兮蒼生得憩
         </p>
     </blockquote>
 </div>
