--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -464,6 +464,7 @@
         <li><a href="./story/355.html">The Delegation Reaches the Border</a></li>
         <li><a href="./story/356.html">Interrogating the Delegation</a></li>
         <li><a href="./story/357.html">Li Miaozhen's Message</a></li>
+        <li><a href="./story/358.html">Sanhuang County</a></li>
     </ol>
 
     <hr>
