--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <div class="cbox">
 
-        <h1>燕文院</h1>
+        <h1>
+            <img src="/style/ywy-full-compressed.svg" alt="燕文院" style="max-width: 240px; margin-bottom: -20px;">
+        </h1>
+
+
         <p style="text-align: center; margin-top: -1.2em;">
             Yanwenyuan
         </p>
@@ -28,7 +32,7 @@
                 <a href="./baoyu/">暴雨中：In Torrential Rains</a> (进行中)
             </li>
             <li>
-                <a href="./shenhai/">神海大作集：Collections from the Celestial Sea</a>
+                <a href="./shenhai/">神海大作集：Collections from the Celestial Sea</a>（竖排繁体）
             </li>
             
             
@@ -49,10 +53,10 @@
 
         <ul>
             <li>
-                <a href="./fengshen/">封神演义【明】许仲林</a>
+                <a href="./fengshen/">封神演义【明】许仲林</a>（简）
             </li>
             <li>
-                <a href="./shiji/">史記三家注【漢】司馬遷（繁）</a>
+                <a href="./shiji/">史記三家注【漢】司馬遷</a>
             </li>
         </ul>
 
