--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -465,6 +465,7 @@
         <li><a href="./story/356.html">Interrogating the Delegation</a></li>
         <li><a href="./story/357.html">Li Miaozhen's Message</a></li>
         <li><a href="./story/358.html">Sanhuang County</a></li>
+        <li><a href="./story/359.html">Spy</a></li>
     </ol>
 
     <hr>
