--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -466,6 +466,7 @@
         <li><a href="./story/357.html">Li Miaozhen's Message</a></li>
         <li><a href="./story/358.html">Sanhuang County</a></li>
         <li><a href="./story/359.html">Spy</a></li>
+        <li><a href="./story/360.html">Xu Qi'an's Ambush Plan</a></li>
     </ol>
 
     <hr>
