--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -30,7 +30,13 @@
 
 --- 
 
-【序】诗曰：
+【序】
+
+八千年前，神战席卷凡间。西方七圣人神伐中地雨神，最终七神变四，天庭崩裂，雨神重创陷入沉睡。元天重临人间，暴雨肆虐大地。东海深处，魔教抬头，暗流汹涌。
+
+雨神不苏，恐灾将至，故东海宗常往陆寻弟，求灰昏之下之有一光焉，其继雨家之脉者，藏于苦苦黎民中。不知何图也，能救天下乎？
+
+有诗为证，曰：
 
 > 东玄独坐君王祚，展翼孤承百姓忡。
 > 王夫单行星夜路，沾墨默记世言隆。    
@@ -49,15 +55,7 @@
 > 东玄独坐君王祚，西岭明皇龙位空。
 > 荒野天间生非易，黎民殊死暴雨中。
 
-
-八千年前，神战席卷凡间。西方七圣人神伐中地雨神，最终七神变四，天庭崩裂，雨神重创陷入沉睡。元天重临人间，暴雨肆虐大地。东海深处，魔教抬头，暗流汹涌。雨神不苏，恐灾将至，故东海宗常往陆寻弟，求灰昏之下之有一光焉，其继雨家之脉者，藏于苦苦黎民中。不知何图也，能救天下乎？
-
 </div>
-
-    <p>
-        故东海宗常往陆寻弟，求灰昏之下之有一光焉，其继雨家之脉者，藏于苦苦黎民中。不知何图也，能救天下乎？
-    </p>
-
     <h2>
         目录
     </h2>
