--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -467,6 +467,7 @@
         <li><a href="./story/358.html">Sanhuang County</a></li>
         <li><a href="./story/359.html">Spy</a></li>
         <li><a href="./story/360.html">Xu Qi'an's Ambush Plan</a></li>
+        <li><a href="./story/361.html">All Lies</a></li>
     </ol>
 
     <hr>
