--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -468,6 +468,7 @@
         <li><a href="./story/359.html">Spy</a></li>
         <li><a href="./story/360.html">Xu Qi'an's Ambush Plan</a></li>
         <li><a href="./story/361.html">All Lies</a></li>
+        <li><a href="./story/362.html">The Culprit</a></li>
     </ol>
 
     <hr>
