--- a/shenhai/index.html
+++ b/shenhai/index.html
@@ -33,7 +33,7 @@
     <h2>神海作大集序</h2>
 
     <p>
-        茫茫神海，浩浩重天。億萬界散於冥虛，無量礁洒於墨洋。成片成羣，乃諸大界也。其中：上神稱帝，下神大夫，諸仙般臣，凡下庶衆。而又閒閒然，分小小諸天，若聯聯羣嶼。界界之閒，遙哉不限東南西北，遠哉不論尺步丈里。冥冥海里，某孤羣島生，爲是講之啟。其有諸神多界，人龍靈妖，历久百萬年，地廣億萬里。大劫數運運，小劫動轉轉。往事中多有精彩，來事中多有神秘。
+        茫茫神海，浩浩重天。億萬界散於冥虛，無量礁洒於墨洋。成片成羣，乃諸大界也。其中：上神稱帝，下神大夫，諸仙般臣，凡下庶衆。而又閒閒然，分小小諸天，若聯聯羣嶼。界界之閒，遙哉不限東南西北，遠哉不論尺步丈里。冥冥海里，某孤羣島生，爲是講之啟。其有諸神多界，人龍靈妖，歷久百萬年，地廣億萬里。大劫數運運，小劫動轉轉。往事中多有精彩，來事中多有神秘。
     </p>
 
     <p>
