--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -469,6 +469,7 @@
         <li><a href="./story/360.html">Xu Qi'an's Ambush Plan</a></li>
         <li><a href="./story/361.html">All Lies</a></li>
         <li><a href="./story/362.html">The Culprit</a></li>
+        <li><a href="./story/363.html">I've taken a liking to him</a></li>
     </ol>
 
     <hr>
