--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -470,6 +470,7 @@
         <li><a href="./story/361.html">All Lies</a></li>
         <li><a href="./story/362.html">The Culprit</a></li>
         <li><a href="./story/363.html">I've taken a liking to him</a></li>
+        <li><a href="./story/364.html">The Yao Army Crosses the Border</a></li>
     </ol>
 
     <hr>
