--- a/dagengren/story/362.html
+++ b/dagengren/story/362.html
@@ -149,9 +149,9 @@ Moreover, it defied logic that even a trusted spy of the Zhenbei King would rema
 
 *Commander Que Yongxiu?*
 
-Xu Qi’an recalled the man’s background: Commander of Chuzhou and titled “National Protector” Duke. The title was hereditary, originating from the first Duke, who had been a sworn brother of Emperor Wuzong—the prince who had colluded with the Buddhist sect to overthrow the first Jianzheng five centuries ago.
+Xu Qi’an recalled the man’s background: Commander of Chuzhou and titled “Duke Protector of the Nation”. The title was hereditary, originating from the first Duke, who had been a sworn brother of Emperor Wuzong—the prince who had colluded with the Buddhist sect to overthrow the first Jianzheng five centuries ago.
 
-The National Protector Duke lineage, one of the few enduring noble families among the old aristocracy, was closely tied to the royal family, boasting marriages with two princesses and four county lords over its history.
+The Duke Protector lineage, one of the few enduring noble families among the old aristocracy, was closely tied to the royal family, boasting marriages with two princesses and four county lords over its history.
 
 *Que Yongxiu and the Zhenbei King colluded to orchestrate the massacre… I must gather evidence and report this. I refuse to believe Emperor Yuanjing can shield them. Even if he tries, Duke Wei and the court officials won’t allow it.*
 
@@ -159,7 +159,7 @@ The court, the capital’s officials—be they virtuous or corrupt—formed a fo
 
 Such a horrific crime could not be swept under the rug.
 
-Xu Qi’an suppressed the urge to rush back to the capital with the souls as evidence. It wasn’t enough. A spy’s confession alone could not topple the Zhenbei King and the National Protector Duke.
+Xu Qi’an suppressed the urge to rush back to the capital with the souls as evidence. It wasn’t enough. A spy’s confession alone could not topple the Zhenbei King and the Duke Protector.
 
 He turned to the three barbarian warriors and asked, “Why did you ambush the Zhenbei King’s spy?”
 
