--- a/dagengren/story/363.html
+++ b/dagengren/story/363.html
@@ -167,7 +167,7 @@ As long as the cities held, even massacres in villages wouldn’t be enough to w
 
 The deputy justice nodded. “No issues.”
 
-Yang Yan was silent for a moment before saying, “Constable Chen, spend the next few days gathering intel around Chuzhou. Censor Liu, accompany me to the Military Command to meet National Protector Que Yongxiu.”
+Yang Yan was silent for a moment before saying, “Constable Chen, spend the next few days gathering intel around Chuzhou. Censor Liu, accompany me to the Military Command to meet Duke Protector Que Yongxiu.”
 
 Censor Liu gave a slow nod.
 
