--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -471,6 +471,7 @@
         <li><a href="./story/362.html">The Culprit</a></li>
         <li><a href="./story/363.html">I've taken a liking to him</a></li>
         <li><a href="./story/364.html">The Yao Army Crosses the Border</a></li>
+        <li><a href="./story/365.html">White Horse, Silver Spear: Li Miaozhen</a></li>
     </ol>
 
     <hr>
