--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -472,6 +472,7 @@
         <li><a href="./story/363.html">I've taken a liking to him</a></li>
         <li><a href="./story/364.html">The Yao Army Crosses the Border</a></li>
         <li><a href="./story/365.html">White Horse, Silver Spear: Li Miaozhen</a></li>
+        <li><a href="./story/366.html">Bafflingly Complex</a></li>
     </ol>
 
     <hr>
