--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -473,6 +473,7 @@
         <li><a href="./story/364.html">The Yao Army Crosses the Border</a></li>
         <li><a href="./story/365.html">White Horse, Silver Spear: Li Miaozhen</a></li>
         <li><a href="./story/366.html">Bafflingly Complex</a></li>
+        <li><a href="./story/367.html">Clashing Heads</a></li>
     </ol>
 
     <hr>
