--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -474,6 +474,7 @@
         <li><a href="./story/365.html">White Horse, Silver Spear: Li Miaozhen</a></li>
         <li><a href="./story/366.html">Bafflingly Complex</a></li>
         <li><a href="./story/367.html">Clashing Heads</a></li>
+        <li><a href="./story/368.html">Ambushed</a></li>
     </ol>
 
     <hr>
