--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -475,6 +475,7 @@
         <li><a href="./story/366.html">Bafflingly Complex</a></li>
         <li><a href="./story/367.html">Clashing Heads</a></li>
         <li><a href="./story/368.html">Ambushed</a></li>
+        <li><a href="./story/369.html">Empathy</a></li>
     </ol>
 
     <hr>
