--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -476,6 +476,7 @@
         <li><a href="./story/367.html">Clashing Heads</a></li>
         <li><a href="./story/368.html">Ambushed</a></li>
         <li><a href="./story/369.html">Empathy</a></li>
+        <li><a href="./story/370.html">Movement on All Sides</a></li>
     </ol>
 
     <hr>
