--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -477,6 +477,7 @@
         <li><a href="./story/368.html">Ambushed</a></li>
         <li><a href="./story/369.html">Empathy</a></li>
         <li><a href="./story/370.html">Movement on All Sides</a></li>
+        <li><a href="./story/371.html">Attacking the City</a></li>
     </ol>
 
     <hr>
