--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -478,6 +478,8 @@
         <li><a href="./story/369.html">Empathy</a></li>
         <li><a href="./story/370.html">Movement on All Sides</a></li>
         <li><a href="./story/371.html">Attacking the City</a></li>
+        <li><a href="./story/372.html">Sovereign Sword</a></li>
+        <li><a href="./story/373.html">Heaven Punishes the Unjust</a></li>
     </ol>
 
     <hr>
