--- a/dagengren/story/100.html
+++ b/dagengren/story/100.html
@@ -43,7 +43,7 @@ He had just sent that phrase, and was just about to continue, as a whole stream 
 
 “…” Xu Qi’an squatted in the stinking latrine room, in a daze.
 
-*Everyone seems to care a lot about this situation. Fair enough, considering that it involves the National Guardian Sword of the Great Feng. This type of secret, no one would not be curious.*
+*Everyone seems to care a lot about this situation. Fair enough, considering that it involves the Sovereign Sword of the Great Feng. This type of secret, no one would not be curious.*
 
 *Especially, no one in the Heaven and Earth Society are ordinary characters; they all have great powers behind their backs, or have enough power themselves.*
 
@@ -157,7 +157,7 @@ Xu Qi’an paused for a few seconds, before writing: 【I heard a cry for help f
 
 Such a casual sentence from Three, was like a thunderclap ringing through all the Heaven and Earth Society members’ heads. 
 
-*The place where the founding emperor found his Dao, the lake where the National Guardian sword was housed and revered, had a call for help…*
+*The place where the founding emperor found his Dao, the lake where the Sovereign Sword was housed and revered, had a call for help…*
 
 *Who was calling for help?*
 
@@ -311,9 +311,7 @@ Xu Qi’an took off his sabre, and with the scabbard spanked the small servant o
 
 ---
 
-Translator note: over 2700 words, what a way to achieve 100 chapters! 
-
-[^1]: In Chinese culture, the default for “inviting someone out” implies that you pay for them, whereas splitting the bill/each paying his own is an exception.    
+[^1]: In Chinese culture, the default for “inviting someone out” implies that you pay for them, whereas splitting the bill/each paying his own is an exception. 
     </div>
 
     <div class="double" id="footer">
