--- a/dagengren/story/108.html
+++ b/dagengren/story/108.html
@@ -133,11 +133,11 @@ But this little bronze gong somehow immediately worked out that something was se
 
 Wei Yuan suppressed his surprised expression, and laughed, “Tell me your reasons.”
 
-Xu Qi’an still had a crime hanging over his head, and couldn’t wait to prove himself to Wei Yuan, saying “Even though Sangpo Lake is our Great Feng’s forbidden place, but to an outsider, the only thing that was worth fearing would be the Nation’s Guardian Sword.”
+Xu Qi’an still had a crime hanging over his head, and couldn’t wait to prove himself to Wei Yuan, saying “Even though Sangpo Lake is our Great Feng’s forbidden place, but to an outsider, the only thing that was worth fearing would be the Nation’s Sovereign Sword.”
 
 Looking down at the dossier, he continued, “But on here, it’s written that the Guardian Divine Sword was undamaged. Then the perpetrator’s target would have to be something else.”
 
-“Thus your subordinate thought, that there must be something under Yongzhen Shanhe Temple. But why would this thing have to be put under Sangpo Lake? So your subordinate made a bold guess, that that thing may need the Guardian Sword to keep it sealed.”
+“Thus your subordinate thought, that there must be something under Yongzhen Shanhe Temple. But why would this thing have to be put under Sangpo Lake? So your subordinate made a bold guess, that that thing may need the Sovereign Sword to keep it sealed.”
 
 In reality, Xu Qi’an had done a reverse-deduction after getting a definite answer.
 
@@ -251,10 +251,10 @@ He burst out of the water, and climbed back onto the small bloat, simultaneously
 
 ---
 
-[^1]: Token, plate, plaque, basically a hand sized thing that was carried to show one’s authority    
-[^2]: 杨峰 (same Yang as Yang Yan)    
-[^3]: 闵山    
-[^4]: Chinese emperors are associated with dragons, so a lot of things about an emperor will generally have a “dragon” adjective thrown in for respect.    
+[^1]: Token, plate, plaque, basically a hand sized thing that was carried to show one’s authority
+[^2]: 杨峰 (same Yang as Yang Yan)
+[^3]: 闵山
+[^4]: Chinese emperors are associated with dragons, so a lot of things about an emperor will generally have a “dragon” adjective thrown in for respect.
 
     </div>
 
