--- a/dagengren/story/99.html
+++ b/dagengren/story/99.html
@@ -113,7 +113,7 @@ Xu Qi'an was sure that Number Two was not a member of the Imperial Court. Unless
 
 【TWO: Which expert tried to perform an assassination?】
 
-【NINE: The National Guardian Sword is the sword of the founding emperor of the Great Feng. Ever since Great Feng was established, It had been baptized by the national destiny of the entire country daily. Causing it to become a treasure closely related to the national destiny of Great Feng. It stands to reason that such an important weapon shouldn't show any abnormality.】
+【NINE: The Sovereign Sword is the sword of the founding emperor of the Great Feng. Ever since Great Feng was established, It had been baptized by the national destiny of the entire country daily. Causing it to become a treasure closely related to the national destiny of Great Feng. It stands to reason that such an important weapon shouldn't show any abnormality.】
 
 Just after Number Two replied, Number Nine Daoist Jinlian's reply followed closely.
 
@@ -193,7 +193,7 @@ Thinking of this. Number Four was taken aback since he came to a surprising conc
 
 *The problem originated from Sangpo. Number Three spied on a smidgen of truth, which made him doubt his previous understanding.*
 
-【FOUR: THREE, You know something, Don't you? You were also there at the time. After you inquired about the Sangpo, the Guardian Sword reacted immediately and made a big commotion. This couldn't be a coincidence.】
+【FOUR: THREE, You know something, Don't you? You were also there at the time. After you inquired about the Sangpo, the Sovereign Sword reacted immediately and made a big commotion. This couldn't be a coincidence.】
 
 Number Four's message caused all the members of the Heaven and Earth Society to react.
 
@@ -229,11 +229,11 @@ Seeing this, Xu Qi'an decided not to remain silent any longer and moved his brus
 
 ---
 
-[^1]: Li Ronghao is a Chinese singer. Don't know why this is a meme    
-[^2]: 镇北: Guarding the North    
-[^3]: Chinese version of eating popcorn.    
-[^4]: Your auntie/your grand-aunt: self-reference used by a woman, similar to how a man would use “your granddad”    
-    </div>
+[^1]: Li Ronghao is a Chinese singer. Don't know why this is a meme
+[^2]: 镇北: Guarding the North
+[^3]: Chinese version of eating popcorn.
+[^4]: Your auntie/your grand-aunt: self-reference used by a woman, similar to how a man would use “your granddad”
+</div>
 
     <div class="double" id="footer">
 
