--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -480,6 +480,7 @@
         <li><a href="./story/371.html">Attacking the City</a></li>
         <li><a href="./story/372.html">Sovereign Sword</a></li>
         <li><a href="./story/373.html">Heaven Punishes the Unjust</a></li>
+        <li><a href="./story/374.html">Avenger</a></li>
     </ol>
 
     <hr>
