--- a/dagengren/story/374.html
+++ b/dagengren/story/374.html
@@ -397,7 +397,7 @@ Yang Yan shook his head. “I don’t know what method they used, but this power
 
 With that, he leaped off the roof, accompanied by the three civil officials, while the lead constable Chen and centurion Chen Xiao swiftly led the way.
 
-Seeing the martial artists’ urgency and their fearful escape, Censor Liu and the others abandoned all hope of survival and realized they must leave Chuzhou City at once.
+Seeing the martial artists’ urgency and their fearful escape, Censor Liu and the others abandoned all hope of survival and realised they must leave Chuzhou City at once.
 
 …
 
