--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -481,6 +481,7 @@
         <li><a href="./story/372.html">Sovereign Sword</a></li>
         <li><a href="./story/373.html">Heaven Punishes the Unjust</a></li>
         <li><a href="./story/374.html">Avenger</a></li>
+        <li><a href="./story/375.html">To Bow</a></li>
     </ol>
 
     <hr>
