--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -482,6 +482,7 @@
         <li><a href="./story/373.html">Heaven Punishes the Unjust</a></li>
         <li><a href="./story/374.html">Avenger</a></li>
         <li><a href="./story/375.html">To Bow</a></li>
+        <li><a href="./story/376.html">Game Analysis</a></li>
     </ol>
 
     <hr>
