--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -483,6 +483,7 @@
         <li><a href="./story/374.html">Avenger</a></li>
         <li><a href="./story/375.html">To Bow</a></li>
         <li><a href="./story/376.html">Game Analysis</a></li>
+        <li><a href="./story/377.html">Return to the Capital</a></li>
     </ol>
 
     <hr>
