shenhai use jinghua laosongti

--- a/shenhai/index.html
+++ b/shenhai/index.html
@@ -44,6 +44,14 @@
         是作網頁，采修魔道陰術而使排文體列豎下右左，非其本設矣。筆者望是頁能現古書之一二分之美。
     </p>
 
+    <p>
+        （）
+    </p>
+
+    <p>
+        【新】本站新用京華老宋體。是字體大三十兆餘，弗能輕載。故君本地無之，則如常用仙人掌明體。<a href="https://zhuanlan.zhihu.com/p/637491623">若欲見之，請觸此句往下載頁</a>。
+    </p>
+
 </div>
 
 <div class="juan">
