--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         </p>
 
         <p>
-            Landing Page. This site is just meant to link to subsites. <br>
-            是页只通往他页也。
+            君访陋院，燕某欢甚。本页者，录也，存吾燕某之作，又收他书，同可通友方。<br>
+            (This is a Landing Page for Yan and others' works)
         </p>
 
-        <h3>故事 Creations</h3>
+        <h3>作 Creations</h3>
 
         <ul>
             <li>
-                <a href="./baoyu/">暴雨中：In Torrential Rains</a> (进行中)
+                <a href="./baoyu/">暴雨中：In Torrential Rains</a> (一篇玄幻故事；进行中)
             </li>
             <li>
-                <a href="./shenhai/">神海大作集：Collections from the Celestial Sea</a>（竖排繁体）
+                <a href="./shenhai/">神海大作集：Collections from the Celestial Sea</a>（竖排繁体文言短篇小说）
             </li>
             
             
@@ -41,11 +41,11 @@
             </li> -->
         </ul>
 
-        <h3>翻译 Translations</h3>
+        <h3>译 Translations</h3>
 
         <ul>
             <li>
-                <a href="./dagengren/">大奉打更人：The Nightwatchers of Feng by 卖报小郞君</a> (ongoing)
+                <a href="./dagengren/">大奉打更人：The Nightwatchers of Feng by 卖报小郞君</a> (ongoing, English translation)
             </li>
         </ul>
 
@@ -57,6 +57,14 @@
             </li>
             <li>
                 <a href="./shiji/">史記三家注【漢】司馬遷</a>
+            </li>
+        </ul>
+
+        <h3>友院</h3>
+
+        <ul>
+            <li>
+                <a href="https://vistudium.top/">遠見齋</a> Hulenkius
             </li>
         </ul>
 
