use hulenkius's split kinghua to optimise loading

--- a/shenhai/index.html
+++ b/shenhai/index.html
@@ -49,7 +49,7 @@
     </p>
 
     <p>
-        【新】本站新用京華老宋體。是字體大三十兆餘，弗能輕載。故君本地無之，則如常用仙人掌明體。<a href="https://zhuanlan.zhihu.com/p/637491623">若欲見之，請觸此句往下載頁</a>。
+        【新】本站新用京華老宋體。
     </p>
 
 </div>
