--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -484,6 +484,7 @@
         <li><a href="./story/375.html">To Bow</a></li>
         <li><a href="./story/376.html">Game Analysis</a></li>
         <li><a href="./story/377.html">Return to the Capital</a></li>
+        <li><a href="./story/378.html">Three Angers of Emperor Yuanjing</a></li>
     </ol>
 
     <hr>
