--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -485,6 +485,7 @@
         <li><a href="./story/376.html">Game Analysis</a></li>
         <li><a href="./story/377.html">Return to the Capital</a></li>
         <li><a href="./story/378.html">Three Angers of Emperor Yuanjing</a></li>
+        <li><a href="./story/379.html">Prime Minister Sir, a great calamity has struck Chuzhou</a></li>
     </ol>
 
     <hr>
