--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -486,7 +486,9 @@
         <li><a href="./story/377.html">Return to the Capital</a></li>
         <li><a href="./story/378.html">Three Angers of Emperor Yuanjing</a></li>
         <li><a href="./story/379.html">Prime Minister Sir, a great calamity has struck Chuzhou</a></li>
-        <li><a href="./story/380.html">Dark Currents Abound</a></li>
+        <li><a href="./story/380.html">Rage!</a></li>
+        <li><a href="./story/381.html">Dark Currents Abound</a></li>
+        <li><a href="./story/382.html">The Curtain Rises (1)</a></li>
     </ol>
 
     <hr>
