--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -489,6 +489,7 @@
         <li><a href="./story/380.html">Rage!</a></li>
         <li><a href="./story/381.html">Dark Currents Abound</a></li>
         <li><a href="./story/382.html">The Curtain Rises (1)</a></li>
+        <li><a href="./story/383.html">The Curtain Rises (2)</a></li>
     </ol>
 
     <hr>
