--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -490,6 +490,7 @@
         <li><a href="./story/381.html">Dark Currents Abound</a></li>
         <li><a href="./story/382.html">The Curtain Rises (1)</a></li>
         <li><a href="./story/383.html">The Curtain Rises (2)</a></li>
+        <li><a href="./story/384.html">The Curtain Rises (3)</a></li>
     </ol>
 
     <hr>
