--- a/shenhai/shgj/index.html
+++ b/shenhai/shgj/index.html
@@ -191,11 +191,11 @@
 
 <div class="juan">
     <h2 id="shouchao">獸潮</h2>
-    <p>左史云：「遠古大劫碎天下。西半天爲（）靈父所收，映人閒爲靈族造家。」事後人閒再臨多變，劫數運運，而靈界靜然，故雖云靈閒地勢相同然，其海陸映形耳；大地非我凡閒能比。且言東半天，有淵古皇沙，淵東大周龍朝。西山聖然，雖曰氣淵而法失，而有高聖居焉，神山岱棲（）月；淵内有佛；雨林拜古神。而靈閒實是有山，高直通天。而其安乎？其祥乎？非哉！是山正名曰昆吾〔或作崐峿〕，其東中原靈人俗謂魔山。何謂魔山？以其所藏蠻荒古法者也，以其所隱天外陰獸也。我西山不可踰，其昆吾不可近。我西山仙人建府其麓，其昆吾道宗設封其界。</p>
+    <p>左史云：「遠古大劫碎天下。西半天爲（）靈父所收，映人閒爲靈族造家。」事後人閒再臨多變，劫數運運，而靈界靜然，故雖云靈閒地勢相同然，其海陸映形耳；大地非我凡閒能比。且言東半天，有淵西皇沙，淵東大周龍朝。西山聖然，雖曰氣淵而法失，而有高聖居焉，神山岱棲（）月；淵内有佛；雨林拜古神。而靈閒實是有山，高直通天。而其安乎？其祥乎？非哉！是山正名曰昆吾〔或作崐峿〕，其東中原靈人俗謂魔山。何謂魔山？以其所藏蠻荒古法者也，以其所隱天外陰獸也。我西山不可踰，其昆吾不可近。我西山仙人建府其麓，其昆吾道宗設封其界。</p>
 
     <p>靈界大原之地，分爲三境七地，乃三王七侯國，合而爲盟。三境中，北曰馮、南曰淮、西曰南隴。七地疆，曰萬、戌、蚩、庚、瀟、喬、雚也。南隴在西，直臨昆吾麓，常受之苦。因其民悍，崇武爲宗，凡人不及東地，仙宗足同其合。因常有陰獸虐國，民不聊生，曾傾蕩國財，更請馮淮助力，竟築三重仙城，名曰金剛城。北越萬至邑北螢，南通雚逹邑南港。百丈仙壁高如山，萬理神墻長如蛟。永隔昆吾人土安，遠拒陰魔國家平。宏哉威哉，而靈人安泰。</p>
 
-    <p>南隴史中近五千年金剛城止破外重一回，乃四千歳前魔獸同潮一災。何謂魔獸同潮？則心先說獸潮者何也。三境之北，長冬獨霸。冰土霜林，荒獸之家。謂之蠻荒北域。真野之地，妖獸不勝其數。時或甲子，或數甲子，北妖激然大侵靈人之地，殺食凡人。北境之人多居高郭堡邑，仙宗坐守，以護其族。而獸潮有大有小，小者易御可以歷練；大者國災北地危然。靈士不知其因。再還其本；獸潮大乃滅國害，且又能動西山昆吾魔陰同襲，西境，則能毁靈家基業，夷侯弑王，乃魔獸同潮。昔大李統人閒天下，靈閒獸潮再襲，此潮之大，縱横四萬里，使馮境城城連破，庚蚩戌萬近滅。而獸潮正盛然，又引昆吾之魔東進南隴。而萬居金剛城十日既破。南隴王隕。淮王親隹撑西國，率軍助戰。然勢之危，淮王未能退魔西北，馮王在東北無能來援。淮王不得已，啓渡界天法苦求人閒李帝。李帝應之，請仙宗降靈閒。但見仙師無數劍如雨，龍軍遮天空若霞。有李朝大軍在，靈人終逐陰獸出金剛城方安。而李氏必亦收獲非淺哉。</p>
+    <p>南隴史中近五千年金剛城止破外重一回，乃四千歳前魔獸同潮一災。何謂魔獸同潮？則先說獸潮者何也。三境之北，長冬獨霸。冰土霜林，荒獸之家。謂之蠻荒北域。真野之地，妖獸不勝其數。時或甲子，或數甲子，北妖激然大侵靈人之地，殺食凡人。北境之人多居高郭堡邑，仙宗坐守，以護其族。而獸潮有大有小，小者易御可以歷練；大者國災北地危然。靈士不知其因。再還其本；獸潮大乃滅國害，且又能動西山昆吾魔陰同襲，西境，則能毁靈家基業，夷侯弑王，乃魔獸同潮。昔大李統人閒天下，靈閒獸潮再襲，此潮之大，縱横四萬里，使馮境城城連破，庚蚩戌萬近滅。而獸潮正盛然，又引昆吾之魔東進南隴。而萬居金剛城十日既破。南隴王隕。淮王親隹撑西國，率軍助戰。然勢之危，淮王未能退魔西北，馮王在東北無能來援。淮王不得已，啓渡界天法苦求人閒李帝。李帝應之，請仙宗降靈閒。但見仙師無數劍如雨，龍軍遮天空若霞。有李朝大軍在，靈人終逐陰獸出金剛城方安。而李氏必亦收獲非淺哉。</p>
 </div>
 
 </c-box>
