--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -491,6 +491,7 @@
         <li><a href="./story/382.html">The Curtain Rises (1)</a></li>
         <li><a href="./story/383.html">The Curtain Rises (2)</a></li>
         <li><a href="./story/384.html">The Curtain Rises (3)</a></li>
+        <li><a href="./story/385.html">I'm Home</a></li>
     </ol>
 
     <hr>
