--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -492,6 +492,7 @@
         <li><a href="./story/383.html">The Curtain Rises (2)</a></li>
         <li><a href="./story/384.html">The Curtain Rises (3)</a></li>
         <li><a href="./story/385.html">I'm Home</a></li>
+        <li><a href="./story/386.html">Anger!</a></li>
     </ol>
 
     <hr>
