--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -493,6 +493,7 @@
         <li><a href="./story/384.html">The Curtain Rises (3)</a></li>
         <li><a href="./story/385.html">I'm Home</a></li>
         <li><a href="./story/386.html">Anger!</a></li>
+        <li><a href="./story/387.html">Admitting Fault</a></li>
     </ol>
 
     <hr>
