--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -494,6 +494,7 @@
         <li><a href="./story/385.html">I'm Home</a></li>
         <li><a href="./story/386.html">Anger!</a></li>
         <li><a href="./story/387.html">Admitting Fault</a></li>
+        <li><a href="./story/388.html">Self-Reproach Edict</a></li>
     </ol>
 
     <hr>
