--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -495,6 +495,7 @@
         <li><a href="./story/386.html">Anger!</a></li>
         <li><a href="./story/387.html">Admitting Fault</a></li>
         <li><a href="./story/388.html">Self-Reproach Edict</a></li>
+        <li><a href="./story/389.html">Asking Souls</a></li>
     </ol>
 
     <hr>
