--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -496,6 +496,7 @@
         <li><a href="./story/387.html">Admitting Fault</a></li>
         <li><a href="./story/388.html">Self-Reproach Edict</a></li>
         <li><a href="./story/389.html">Asking Souls</a></li>
+        <li><a href="./story/390.html">Fantastic Beasts of Jiuzhou</a></li>
     </ol>
 
     <hr>
