--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -497,6 +497,7 @@
         <li><a href="./story/388.html">Self-Reproach Edict</a></li>
         <li><a href="./story/389.html">Asking Souls</a></li>
         <li><a href="./story/390.html">Fantastic Beasts of Jiuzhou</a></li>
+        <li><a href="./story/391.html">Summons</a></li>
     </ol>
 
     <hr>
