--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -498,6 +498,7 @@
         <li><a href="./story/389.html">Asking Souls</a></li>
         <li><a href="./story/390.html">Fantastic Beasts of Jiuzhou</a></li>
         <li><a href="./story/391.html">Summons</a></li>
+        <li><a href="./story/392.html">A Case from Years Past</a></li>
     </ol>
 
     <hr>
