--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -499,6 +499,8 @@
         <li><a href="./story/390.html">Fantastic Beasts of Jiuzhou</a></li>
         <li><a href="./story/391.html">Summons</a></li>
         <li><a href="./story/392.html">A Case from Years Past</a></li>
+        <li><a href="./story/393.html">The Abandoned Princess Consort</a></li>
+        <li><a href="./story/394.html">The fruiting of the lotus draws near</a></li>
     </ol>
 
     <hr>
