--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -501,6 +501,7 @@
         <li><a href="./story/392.html">A Case from Years Past</a></li>
         <li><a href="./story/393.html">The Abandoned Princess Consort</a></li>
         <li><a href="./story/394.html">The fruiting of the lotus draws near</a></li>
+        <li><a href="./story/395.html">Obscuring Heaven's Secrets</a></li>
     </ol>
 
     <hr>
@@ -511,7 +512,7 @@
             <li>Fear 貳拾</li>
             <li>TendouKurou 肆</li>
             <li>Laxarus 貳拾</li>
-            <li>Aj Vi 拾陸</li>
+            <li>Aj Vi 肆 每月</li>
             <li>Laxarus 叄拾伍</li>
         </ul>
     </p>
