--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -503,6 +503,7 @@
         <li><a href="./story/394.html">The fruiting of the lotus draws near</a></li>
         <li><a href="./story/395.html">Obscuring Heaven's Secrets</a></li>
         <li><a href="./story/396.html">Waiting for Someone</a></li>
+        <li><a href="./story/397.html">To Jianzhou</a></li>
     </ol>
 
     <hr>
