--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -115,6 +115,10 @@
         <li><a href="./story/50.html">【凶夜】</a></li>
         <li><a href="./story/51.html">【惊蛰】</a></li>
         <li><a href="./story/52.html">【斗龙】</a></li>
+        <li><a href="./story/53.html">【太阳明鉴】</a></li>
+        <li><a href="./story/54.html">【秋考】</a></li>
+        <li><a href="./story/55.html">【争宝会】</a></li>
+        <li><a href="./story/56.html">【公子赵光】</a></li>
     </ol>
 
 </div>
