--- a/baoyu/story/52.html
+++ b/baoyu/story/52.html
@@ -25,14 +25,15 @@
 </div>
 
 <div class="double" id="double">
-
 # 52 斗龙
 
-一下子，阳忠感觉无比卑微，无比渺小，在神龙之目光下，不强于蝼蚁。
+阳忠猛然感到自己的渺小，在神龙的注视下，他不比蝼蚁更强。
 
-这股皇威，试图将他压到地上，在神龙前跪拜求绕。他浑身开始颤抖，想要摆脱这压力，然而所消耗的力气皆付之东流。他的身体已经被压得开始躬下，膝盖开始弯曲。
+那股皇威如山压下，逼迫他屈服，跪地求饶。他的身体开始颤抖，想要挣脱，却徒劳无功。压力沉重如铁，他的脊背已然弯曲，膝盖逐渐下沉。
 
-咚，阳忠一膝落地，但没有完全跪下去。他继续挣扎，心中有两支军队在交战。一方占优势，那是要在威严下服从的一派，但对面更小的军队，那方不愿意叩头的反抗军打得无比激烈，毫不动摇，甚至渐渐开始抢回局面。
+“咚！”一膝跪地，但他没有彻底倒下。
+
+他的内心激烈交战，一方占据上风，顺从于威严，渴望臣服；另一方虽势弱，却拒绝叩首，死战不退。渐渐地，这股反抗的意志竟开始反击，扭转局势。
 
 他不由而想起常崎路的第二首诗：
 
