--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -505,6 +505,7 @@
         <li><a href="./story/396.html">Waiting for Someone</a></li>
         <li><a href="./story/397.html">To Jianzhou</a></li>
         <li><a href="./story/398.html">Earth Book Fragment Holder -- Xu Qi'an</a></li>
+        <li><a href="./story/399.html">Face</a></li>
     </ol>
 
     <hr>
