--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -507,6 +507,7 @@
         <li><a href="./story/398.html">Earth Book Fragment Holder -- Xu Qi'an</a></li>
         <li><a href="./story/399.html">Face</a></li>
         <li><a href="./story/400.html">Retreat</a></li>
+        <li><a href="./story/401.html">One Arm, One Artefact</a></li>
     </ol>
 
     <hr>
