--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -508,6 +508,7 @@
         <li><a href="./story/399.html">Face</a></li>
         <li><a href="./story/400.html">Retreat</a></li>
         <li><a href="./story/401.html">One Arm, One Artefact</a></li>
+        <li><a href="./story/402.html">Revenge does not wait the night</a></li>
     </ol>
 
     <hr>
