--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -509,6 +509,7 @@
         <li><a href="./story/400.html">Retreat</a></li>
         <li><a href="./story/401.html">One Arm, One Artefact</a></li>
         <li><a href="./story/402.html">Revenge does not wait the night</a></li>
+        <li><a href="./story/403.html">To the death</a></li>
     </ol>
 
     <hr>
