--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -510,6 +510,7 @@
         <li><a href="./story/401.html">One Arm, One Artefact</a></li>
         <li><a href="./story/402.html">Revenge does not wait the night</a></li>
         <li><a href="./story/403.html">To the death</a></li>
+        <li><a href="./story/404.html">Crawl</a></li>
     </ol>
 
     <hr>
