--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -511,6 +511,7 @@
         <li><a href="./story/402.html">Revenge does not wait the night</a></li>
         <li><a href="./story/403.html">To the death</a></li>
         <li><a href="./story/404.html">Crawl</a></li>
+        <li><a href="./story/405.html">Trump Card</a></li>
     </ol>
 
     <hr>
