--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -512,6 +512,7 @@
         <li><a href="./story/403.html">To the death</a></li>
         <li><a href="./story/404.html">Crawl</a></li>
         <li><a href="./story/405.html">Trump Card</a></li>
+        <li><a href="./story/406.html">Qiu Qian's Identity</a></li>
     </ol>
 
     <hr>
