--- a/dagengren/story/406.html
+++ b/dagengren/story/406.html
@@ -351,7 +351,7 @@ It was a man dressed all in white, as pale as snow. His white clothes and shoes 
 
 His presence was faint to the extreme — he hadn’t made any effort to mask his arrival, yet the wolves around him kept eating, utterly unaware of the white figure’s presence.
 
-The white figure lowered his head, glanced dispassionately at the mangled corpse, then shifted his gaze towards the Moon Clan Manor.
+The white figure lowered his head, glanced dispassionately at the mangled corpse, then shifted his gaze towards the Yue Clan Manor.
 
 He watched for a long while, then chuckled softly.
 
