--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -513,6 +513,7 @@
         <li><a href="./story/404.html">Crawl</a></li>
         <li><a href="./story/405.html">Trump Card</a></li>
         <li><a href="./story/406.html">Qiu Qian's Identity</a></li>
+        <li><a href="./story/407.html">The Rules of the Wulin Alliance</a></li>
     </ol>
 
     <hr>
