--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -514,6 +514,7 @@
         <li><a href="./story/405.html">Trump Card</a></li>
         <li><a href="./story/406.html">Qiu Qian's Identity</a></li>
         <li><a href="./story/407.html">The Rules of the Wulin Alliance</a></li>
+        <li><a href="./story/408.html">Third Rank?</a></li>
     </ol>
 
     <hr>
