--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -515,6 +515,7 @@
         <li><a href="./story/406.html">Qiu Qian's Identity</a></li>
         <li><a href="./story/407.html">The Rules of the Wulin Alliance</a></li>
         <li><a href="./story/408.html">Third Rank?</a></li>
+        <li><a href="./story/409.html">Xu Qi'an vs Cao Qingyang</a></li>
     </ol>
 
     <hr>
