--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -517,6 +517,7 @@
         <li><a href="./story/408.html">Third Rank?</a></li>
         <li><a href="./story/409.html">Xu Qi'an vs Cao Qingyang</a></li>
         <li><a href="./story/410.html">A Punch</a></li>
+        <li><a href="./story/411.html">The Lotus Ripens</a></li>
     </ol>
 
     <hr>
