--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -518,6 +518,7 @@
         <li><a href="./story/409.html">Xu Qi'an vs Cao Qingyang</a></li>
         <li><a href="./story/410.html">A Punch</a></li>
         <li><a href="./story/411.html">The Lotus Ripens</a></li>
+        <li><a href="./story/412.html">The Female National Teacher</a></li>
     </ol>
 
     <hr>
@@ -530,6 +531,7 @@
             <li>Laxarus 貳拾</li>
             <li>Aj Vi 肆 每月</li>
             <li>Laxarus 叄拾伍</li>
+            <li>匿名 貳</li>
         </ul>
     </p>
 
