--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -519,6 +519,7 @@
         <li><a href="./story/410.html">A Punch</a></li>
         <li><a href="./story/411.html">The Lotus Ripens</a></li>
         <li><a href="./story/412.html">The Female National Teacher</a></li>
+        <li><a href="./story/413.html">Cat-Riding Instinct</a></li>
     </ol>
 
     <hr>
