--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -520,6 +520,7 @@
         <li><a href="./story/411.html">The Lotus Ripens</a></li>
         <li><a href="./story/412.html">The Female National Teacher</a></li>
         <li><a href="./story/413.html">Cat-Riding Instinct</a></li>
+        <li><a href="./story/414.html">Splitting the Lotus Seeds</a></li>
     </ol>
 
     <hr>
