--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -521,6 +521,7 @@
         <li><a href="./story/412.html">The Female National Teacher</a></li>
         <li><a href="./story/413.html">Cat-Riding Instinct</a></li>
         <li><a href="./story/414.html">Splitting the Lotus Seeds</a></li>
+        <li><a href="./story/415.html">Awakening the Sabre</a></li>
     </ol>
 
     <hr>
