--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -522,6 +522,7 @@
         <li><a href="./story/413.html">Cat-Riding Instinct</a></li>
         <li><a href="./story/414.html">Splitting the Lotus Seeds</a></li>
         <li><a href="./story/415.html">Awakening the Sabre</a></li>
+        <li><a href="./story/416.html">To Bestow a Name</a></li>
     </ol>
 
     <hr>
@@ -534,6 +535,7 @@
             <li>Laxarus 貳拾</li>
             <li>Aj Vi 肆 每月</li>
             <li>Laxarus 叄拾伍</li>
+            <li>匿名 貳</li>
             <li>匿名 貳</li>
         </ul>
     </p>
