--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -523,6 +523,7 @@
         <li><a href="./story/414.html">Splitting the Lotus Seeds</a></li>
         <li><a href="./story/415.html">Awakening the Sabre</a></li>
         <li><a href="./story/416.html">To Bestow a Name</a></li>
+        <li><a href="./story/417.html">Emperor Yuanjing: Where is our Lotus Seed?</a></li>
     </ol>
 
     <hr>
