--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -524,6 +524,7 @@
         <li><a href="./story/415.html">Awakening the Sabre</a></li>
         <li><a href="./story/416.html">To Bestow a Name</a></li>
         <li><a href="./story/417.html">Emperor Yuanjing: Where is our Lotus Seed?</a></li>
+        <li><a href="./story/418.html">Truth or Dare</a></li>
     </ol>
 
     <hr>
