--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -133,7 +133,7 @@
         <li><a href="./story/30.html">Chemistry Class</a></li>
         <li><a href="./story/31.html">It's Not Free; It's Equivalent Exchange</a></li>
         <li><a href="./story/32.html">Chapter 32</a></li>
-        <li><a href="./story/33.html"><i>I stand in the strong wind</i></a></li>
+        <li><a href="./story/33.html"><i>I stand in the fierce wind</i></a></li>
         <li><a href="./story/34.html">Xu Lingyue: This Life I Must Properly Take Care of Big Brother</a></li>
         <li><a href="./story/35.html">Discussing Business in the Study</a></li>
         <li><a href="./story/36.html">Troublemaker</a></li>
@@ -525,6 +525,7 @@
         <li><a href="./story/416.html">To Bestow a Name</a></li>
         <li><a href="./story/417.html">Emperor Yuanjing: Where is our Lotus Seed?</a></li>
         <li><a href="./story/418.html">Truth or Dare</a></li>
+        <li><a href="./story/419.html">Protection</a></li>
     </ol>
 
     <hr>
