--- a/dagengren/story/33.html
+++ b/dagengren/story/33.html
@@ -25,7 +25,7 @@
     </div>
     
     <div class="double" id="double">
-# 33. *I stand in the strong wind*
+# 33. *I stand in the fierce wind*
 
 He had heard of Magical Tools, His second uncle had even said that cannons were essential for Great Feng's victory in the "Mountain and Sea Campaign".
 
@@ -89,7 +89,11 @@ He didn't ask Sitianjian for a single copper coin, but if the items he got were 
 
 *I can exchange all of them for bank notes, and then slap my aunt's face fiercely...* Thinking of this, Xu Qi'an became even happier.
 
-“*I stand in the strong wind*<br>*And wanna*<br>*Completely get rid of mental anguish.*<br>*Watching the clouds float across the blue sky.*<br>*The sword in my hand is looking for*<br>*The hero of the Celestial Empire…*”
+“*I stand, in the fierce wind,*      
+*Wishing I could sweep away the endless pain in my heart.*      
+*I gaze at the heavens,*      
+*The clouds stir in all directions.*      
+*Sword in hand I ask the world who is the hero?*”
 
 Seeing that the road was clear, he began singing this song from his previous life with passion.
 
