--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -526,6 +526,7 @@
         <li><a href="./story/417.html">Emperor Yuanjing: Where is our Lotus Seed?</a></li>
         <li><a href="./story/418.html">Truth or Dare</a></li>
         <li><a href="./story/419.html">Protection</a></li>
+        <li><a href="./story/420.html">Xu Qi'an My Fishpond has no Useless Fish</a></li>
     </ol>
 
     <hr>
