--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -527,6 +527,7 @@
         <li><a href="./story/418.html">Truth or Dare</a></li>
         <li><a href="./story/419.html">Protection</a></li>
         <li><a href="./story/420.html">Xu Qi'an My Fishpond has no Useless Fish</a></li>
+        <li><a href="./story/421.html">Dark Currents Afoot</a></li>
     </ol>
 
     <hr>
