--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <li>
                 <a href="./shiji/">史記三家注【漢】司馬遷</a>
             </li>
+            <li><a href="./shishuo/">師說【唐】韓愈</a></li>
         </ul>
 
         <h3>友院</h3>
