--- a/shiji/index.html
+++ b/shiji/index.html
@@ -31,7 +31,7 @@
      目录
     </h2>
     <p>
-     漢司馬遷史記三家注原文自<a href="https://ctext.org/wiki.pl?if=gb&amp;res=384378">中國哲學網</a>爲重排版以豎排本書自字符識别而後人改而成又轉以爲不同排版故或有不和者請見諒
+     漢司馬遷史記三家注原文自<a href="https://ctext.org/wiki.pl?if=gb&amp;res=384378">中國哲學網</a>爲重排版以豎排本書自字符識别而後人改而成又轉以爲不同排版故或有不和者請見諒<br><a href="/">※返回主页</a>
     </p>
     <ul>
      <li>
