--- a/fengshen/index.html
+++ b/fengshen/index.html
@@ -31,7 +31,7 @@
      目录
     </h2>
     <p>
-     明代许仲林作《封神演义》共百回自电子书改为网上竖排之版。本人非版权所有者请见版权信息。若有所犯敬请联系。
+     明代许仲林作《封神演义》共百回自电子书改为网上竖排之版。本人非版权所有者请见版权信息。若有所犯敬请联系。<a href="/">※返回主页</a>
     </p>
     <ul>
      <li>
