--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <a href="./shiji/">史記三家注【漢】司馬遷</a>
             </li>
             <li><a href="./shishuo/">師說【唐】韓愈</a></li>
+            <li><a href="./jimengyaojue/">擊蒙要訣【清】李珥；自《栗谷先生全書》</a></li>
         </ul>
 
         <h3>友院</h3>
