--- a/jimengyaojue/index.html
+++ b/jimengyaojue/index.html
@@ -29,17 +29,17 @@
     </div>
 </div>
 <div class="juanku">
-    <div><a href="序">序</a></div>
-    <div><a href="立志章第一">立志章第一</a></div>
-    <div><a href="革舊習章第二">革舊習章第二</a></div>
-    <div><a href="持身章第三">持身章第三</a></div>
-    <div><a href="讀書章第四">讀書章第四</a></div>
-    <div><a href="事親章第五">事親章第五</a></div>
-    <div><a href="喪制章第六">喪制章第六</a></div>
-    <div><a href="祭禮章第七">祭禮章第七</a></div>
-    <div><a href="居家章第八">居家章第八</a></div>
-    <div><a href="接人章第九">接人章第九</a></div>
-    <div><a href="處世章第十">處世章第十</a></div>
+    <div><a href="#序">序</a></div>
+    <div><a href="#立志章第一">立志章第一</a></div>
+    <div><a href="#革舊習章第二">革舊習章第二</a></div>
+    <div><a href="#持身章第三">持身章第三</a></div>
+    <div><a href="#讀書章第四">讀書章第四</a></div>
+    <div><a href="#事親章第五">事親章第五</a></div>
+    <div><a href="#喪制章第六">喪制章第六</a></div>
+    <div><a href="#祭禮章第七">祭禮章第七</a></div>
+    <div><a href="#居家章第八">居家章第八</a></div>
+    <div><a href="#接人章第九">接人章第九</a></div>
+    <div><a href="#處世章第十">處世章第十</a></div>
 </div>
 <div class="juan">
     <h3 id="序">
