--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -529,6 +529,7 @@
         <li><a href="./story/420.html">Xu Qi'an My Fishpond has no Useless Fish</a></li>
         <li><a href="./story/421.html">Dark Currents Afoot</a></li>
         <li><a href="./story/422.html">Xu Qi'an: Erlang, Big Brother will teach you how to raise fish</a></li>
+        <li><a href="./story/423.html">See Lin'an</a></li>
     </ol>
 
     <hr>
