--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -530,6 +530,7 @@
         <li><a href="./story/421.html">Dark Currents Afoot</a></li>
         <li><a href="./story/422.html">Xu Qi'an: Erlang, Big Brother will teach you how to raise fish</a></li>
         <li><a href="./story/423.html">See Lin'an</a></li>
+        <li><a href="./story/424.html">Seeking Reward</a></li>
     </ol>
 
     <hr>
