--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -532,6 +532,7 @@
         <li><a href="./story/423.html">See Lin'an</a></li>
         <li><a href="./story/424.html">Seeking Reward</a></li>
         <li><a href="./story/425.html">The Missing Recorder</a></li>
+        <li><a href="./story/426.html">Contract for Body</a></li>
     </ol>
 
     <hr>
