--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -533,6 +533,7 @@
         <li><a href="./story/424.html">Seeking Reward</a></li>
         <li><a href="./story/425.html">The Missing Recorder</a></li>
         <li><a href="./story/426.html">Contract for Body</a></li>
+        <li><a href="./story/427.html">Dance</a></li>
     </ol>
 
     <hr>
